adds Pro tab materialization , interface , tests , lfm model
